// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for algebraCAS 1`] = `
{
  "buttons": 14,
  "circles": 0,
  "inputs": 1,
  "lengthBucket": 34,
  "paths": 0,
  "sha": "cf52c3d626b5ea1a",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for calculus 1`] = `
{
  "buttons": 29,
  "circles": 1,
  "inputs": 9,
  "lengthBucket": 102,
  "paths": 0,
  "sha": "4cbe120c802157b7",
  "svgs": 2,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for dataPlot 1`] = `
{
  "buttons": 31,
  "circles": 0,
  "inputs": 9,
  "lengthBucket": 58,
  "paths": 0,
  "sha": "d397bcf9c0691adf",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for dataStudio 1`] = `
{
  "buttons": 31,
  "circles": 0,
  "inputs": 9,
  "lengthBucket": 78,
  "paths": 0,
  "sha": "54e23a49cd67fc5e",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for funcGrapher 1`] = `
{
  "buttons": 0,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 0,
  "paths": 0,
  "sha": "755113491ce3b672",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for geoQuiz 1`] = `
{
  "buttons": 12,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 34,
  "paths": 0,
  "sha": "94f12affa8c3ee81",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for geometryProver 1`] = `
{
  "buttons": 17,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 39,
  "paths": 0,
  "sha": "2dbea9268fba8d6a",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for graphCalc 1`] = `
{
  "buttons": 26,
  "circles": 0,
  "inputs": 6,
  "lengthBucket": 67,
  "paths": 0,
  "sha": "92315faedbfdeb06",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for inequality 1`] = `
{
  "buttons": 30,
  "circles": 0,
  "inputs": 7,
  "lengthBucket": 76,
  "paths": 0,
  "sha": "ce71cb4ad1f46dbb",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for logicLab 1`] = `
{
  "buttons": 35,
  "circles": 0,
  "inputs": 1,
  "lengthBucket": 87,
  "paths": 0,
  "sha": "58d70676473c7412",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for probability 1`] = `
{
  "buttons": 31,
  "circles": 1,
  "inputs": 4,
  "lengthBucket": 69,
  "paths": 0,
  "sha": "1dbedd28b928bf48",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for unitConvert 1`] = `
{
  "buttons": 21,
  "circles": 0,
  "inputs": 1,
  "lengthBucket": 41,
  "paths": 0,
  "sha": "65642df007b85ea4",
  "svgs": 0,
}
`;
